src/components/snapshots/dreidel__components__mem__tests__mem_no_data.snap
---
source: src/components/mem.rs
expression: terminal.backend()
---
"┌ MEM ─────────────────────────────────────────────────────┐"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
