src/components/snapshots/dreidel__components__mem__tests__mem_with_data.snap
---
source: src/components/mem.rs
expression: terminal.backend()
---
"┌ MEM ─────────────────────────────────────────────────────┐"
"│███████████                   RAM  6.0 GiB/16.0 GiB  37.5%│"
"│                              SWAP 0 B/4.0 GiB   0.0%     │"
"│                                                          │"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
